[package]
name = "kamulet_roguelike"
version = "0.3.1"
edition = "2021"
author = "Koma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
legion = "=0.3.1"
serde = { version = "=1.0.115" }
ron = "=0.6.1"

[profile.release]
lto = "thin"